# DataTrackPro

./: .replit  LICENSE  README.md  pyproject.toml
examples/: alert_demo.py  basic_usage.py  config.json  dashboard_demo.py  memory_demo.py  prometheus_demo.py
examples/notebooks/: 01_basic_usage.ipynb  01_basic_usage.nbconvert.ipynb  02_dashboard_monitoring.ipynb  02_dashboard_monitoring.nbconvert.ipynb
pipeline_monitor/: __init__.py  alerts.py  cli.py  config.py  context.py  core.py  decorators.py  logging_utils.py  memory.py  prometheus_metrics.py
pipeline_monitor/dashboard/: __init__.py  app.py
pipeline_monitor/dashboard/templates/: dashboard.html
pipeline_monitor/templates/: config.json
