[project]
name = "pipeline-monitor"
version = "0.1.0"
description = "A library for monitoring data pipelines with automatic metrics collection and logging"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "hatchling>=1.27.0",
    "pip>=25.0.1",
    "prometheus-client>=0.21.1",
    "psutil>=6.1.1",
    "simple-websocket>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline_monitor"]
