[project]
name = "pipeline-monitor"
version = "0.1.0"
description = "A library for monitoring data pipelines with automatic metrics collection and logging"
authors = [
    {name = "Replit Pipeline Monitor Team", email = "team@example.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["monitoring", "pipeline", "observability", "metrics", "logging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "hatchling>=1.27.0",
    "pip>=25.0.1",
    "prometheus-client>=0.21.1",
    "psutil>=6.1.1",
    "simple-websocket>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/replit/pipeline-monitor"
Documentation = "https://github.com/replit/pipeline-monitor/docs"
Repository = "https://github.com/replit/pipeline-monitor.git"
Issues = "https://github.com/replit/pipeline-monitor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline_monitor"]