[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datant-pipeline-monitor"
version = "0.1.0"
authors = [
    { name = "Datant LLC", email = "admin@data-nt.com" },
]
description = "A professional monitoring tool for data pipelines by Datant LLC"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "prometheus-client>=0.21.1",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "simple-websocket>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
pipeline-dashboard = "pipeline_monitor.cli:run_dashboard"
pipeline-demo = "pipeline_monitor.cli:run_demo"
pipeline-prometheus = "pipeline_monitor.cli:run_prometheus"
pipeline-test-alerts = "pipeline_monitor.cli:test_alerts"

[project.urls]
Homepage = "https://data-nt.tech"
Documentation = "https://github.com/pachecocarlos27/DataTrackPro/docs"
Repository = "https://github.com/pachecocarlos27/DataTrackPro.git"
"Bug Tracker" = "https://github.com/pachecocarlos27/DataTrackPro/issues"

[tool.hatch.build.targets.wheel]
packages = ["pipeline_monitor"]
